--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.11"
 dependencies = [
     "pydantic>=2.11.7",
     "python-dateutil>=2.9.0.post0",
+    "requests-oauthlib>=2.0.0",
     "urllib3>=2.5.0",
 ]
 
