--- a/src/.openapi-generator-ignore
+++ b/src/.openapi-generator-ignore
@@ -21,3 +21,7 @@
 #docs/*.md
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
+
+# TL changed files
+tl_ninjarmm/api_client.py
+tl_ninjarmm/configuration.py
