--- a/src/.openapi-generator-ignore
+++ b/src/.openapi-generator-ignore
@@ -22,6 +22,9 @@
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
 
+# Prevent generating a README.md file
+tl_ninjarmm_README.md
+
 # TL changed files
 tl_ninjarmm/api_client.py
 tl_ninjarmm/configuration.py
